<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main"
    tools:context="com.example.marcelo.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/viewBackground"
            android:alpha="0.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bienvenido"
            android:textColor="@color/text"
            android:textSize="32sp"
            android:gravity="center"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <EditText
                    android:id="@+id/edit_text_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nombre"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comenzar"
                style="@style/btn_main"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
